Done customer management, order, account

--- a/eProject/Areas/Admin/Views/Employee/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Employee/Index.cshtml
@@ -82,7 +82,7 @@
                                 <div class="col-xl-6">
                                     <p class="personItem-line">
                                         <i class="fa-solid fa-paper-plane"></i>
-                                        sonhong443@gmail.com
+                                        @employee.Email
                                     </p>
                                 </div>
                                 <div class="col-xl-6">
