--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -10,49 +10,66 @@
         {
             <a class="sidebar-menuItem" href="/Admin/Service">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Service
+                Services
             </a>
             <a class="sidebar-menuItem" href="/Admin/Employee">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Employee
+                Employees
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/Customer">
+                <i class="fa-solid fa-lines-leaning"></i>
+                Customer
             </a>
             <a class="sidebar-menuItem" href="/Admin/PaymentPlan">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Payment plan
+                Payment plans
             </a>
             <a class="sidebar-menuItem" href="/Admin/CallChargeType">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Call charge type
+                Call charge types
             </a>
             <a class="sidebar-menuItem" href="/Admin/RetailShowRoom">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Retail Show Room
+                Retail Show Rooms
             </a>
             <a class="sidebar-menuItem" href="/Admin/Equipment">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Equipment
+                Equipments
             </a>
             <a class="sidebar-menuItem" href="/Admin/Warehouse">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Warehouse
+                Warehouses
             </a>
             <a class="sidebar-menuItem" href="/Admin/Supplier">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Supplier
+                Suppliers
             </a>
             <a class="sidebar-menuItem" href="/Admin/City">
                 <i class="fa-solid fa-lines-leaning"></i>
-                City
+                Citys
             </a>
             <a class="sidebar-menuItem" href="/Admin/ConnectQuantityDiscount">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Connect quantity discount
-            </a>
-            <a class="sidebar-menuItem" href="/Admin/Contact">
-                <i class="fa-solid fa-lines-leaning"></i>
-                Contact
+                Connect quantity discounts
             </a>
         }
-        
+        <a class="sidebar-menuItem" href="/Admin/Contact">
+            <i class="fa-solid fa-lines-leaning"></i>
+            Contacts
+        </a>
+    </nav>
+    <h4 class="sidebar-heading">
+        <i class="fa-solid fa-money-check-dollar"></i>
+        Work Menu
+    </h4>
+    <nav class="sidebar-menu">
+        <a class="sidebar-menuItem" href="/Admin/Order">
+            <i class="fa-solid fa-lines-leaning"></i>
+            Orders
+        </a>
+        <a class="sidebar-menuItem" href="/Admin/Account">
+            <i class="fa-solid fa-lines-leaning"></i>
+            Accounts
+        </a>
     </nav>
 </div>
