--- a/eProject/Views/Order/Detail.cshtml
+++ b/eProject/Views/Order/Detail.cshtml
@@ -99,7 +99,7 @@
                 </p>
                 <p class="order-line">
                     <i class="fa-solid fa-calendar-days"></i>
-                    @Model.OrderDate
+                    @Model.OrderDate.ToString("dd/MM/yyyy")
                 </p>
                 <p class="order-line">
                     Connect Quantity:
