--- a/eProject/Areas/Admin/Views/CustomerFeedback/Reply.cshtml
+++ b/eProject/Areas/Admin/Views/CustomerFeedback/Reply.cshtml
@@ -1,5 +1,4 @@
-﻿@model eProject.Models.ViewModels.CustomerFeedback.CustomerFeedbackViewModel
-@section Styles{
+﻿@model eProject.Models.CustomerFeedback
     <link rel="stylesheet" href="~/Content/Css/AdminCss/Feedback/Add.css" />
 }
 @{
