--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -40,6 +40,10 @@
                 <i class="fa-solid fa-lines-leaning"></i>
                 Warehouses
             </a>
+            <a class="sidebar-menuItem" href="/Admin/WarehouseEquipment">
+                <i class="fa-solid fa-lines-leaning"></i>
+                Equipment In Warehouse
+            </a>
             <a class="sidebar-menuItem" href="/Admin/Supplier">
                 <i class="fa-solid fa-lines-leaning"></i>
                 Suppliers
@@ -75,6 +79,9 @@
             <i class="fa-solid fa-lines-leaning"></i>
             Accounts
         </a>
-
+        <a class="sidebar-menuItem" href="/Admin/Bill">
+            <i class="fa-solid fa-lines-leaning"></i>
+            Bills
+        </a>
     </nav>
 </div>
