--- a/eProject/Views/Account/Detail.cshtml
+++ b/eProject/Views/Account/Detail.cshtml
@@ -113,7 +113,7 @@
                     <i style="color: #333;" class="fa-solid fa-star-half-stroke"></i>
                     Feedback
                 </a>
-                <a class="order-actionItem" href="/Bill/List" style="background: #00ab80; color: #fff;">
+                <a class="order-actionItem" href="/Bill/List?accountID=@Model.AccountID" style="background: #00ab80; color: #fff;">
                     <i class="fa-solid fa-money-bills"></i>
                     View bills
                 </a>
