--- a/eProject/Areas/Admin/Views/Account/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Account/Index.cshtml
@@ -12,7 +12,22 @@
     <div class="topNav-search">
         @using (Html.BeginForm("Search", "Account", new { area = "Admin" }, FormMethod.Post, new { @class = "searchForm" }))
         {
-            <input class="searchForm-input" name="keyword" placeholder="Enter ..." />
+            @Html.AntiForgeryToken()
+            <input class="searchForm-input" name="keyword" placeholder="Enter customer name, phone, id" />
+            <select class="topNav-filterSelect" name="filter">
+                <option class="topNav-filterSelectOption" value="All" selected>
+                    All
+                </option>
+                <option class="topNav-filterSelectOption" value="Connecting">
+                    Are connecting
+                </option>
+                <option class="topNav-filterSelectOption" value="Disconnect">
+                    Are disconnect
+                </option>
+                <option class="topNav-filterSelectOption" value="DueToday">
+                    Due today
+                </option>
+            </select>
             <button class="searchForm-btn">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
@@ -35,8 +50,12 @@
                     </div>
                     <div class="col-xl-6">
                         <h3 class="orderItem-serviceName">
-                            @account.ServiceName
+                            @account.AccountID
                         </h3>
+                        <p class="orderItem-line">
+                            Service Name:
+                            @account.ServiceName
+                        </p>
                         <p class="orderItem-line">
                             @if (account.Status.Equals("Connecting"))
                             {
@@ -63,10 +82,6 @@
                             @account.ConnectedAt.ToString("dd/MM/yyyy")
                         </p>
                         <p class="orderItem-line">
-                            Connect Quantity:
-                            @account.ConnectQuantity
-                        </p>
-                        <p class="orderItem-line">
                             <i class="fa-solid fa-calendar-days"></i>
                             Due date:
                             @if (DateTime.Now.Date == account.DueDate.Date)
@@ -86,6 +101,12 @@
                             </a>
                             <a class="orderItem-actionItem" href="#" style="background: #e52b50; color: #fff;">
                                 Delete
+                            </a>
+                            <a class="orderItem-actionItem" href="/Admin/Customer/Index?customerID=@account.CustomerID" style="background: #a4c639; color: #000;" target="_blank">
+                                Search customer of account
+                            </a>
+                            <a class="orderItem-actionItem" href="/Admin/Bill/Index?accountID=@account.AccountID" style="background: #a1caf1; color: #333;" target="_blank">
+                                Bills of account
                             </a>
                         </div>
                     </div>
