--- a/eProject/Areas/Admin/Views/Bill/Edit.cshtml
+++ b/eProject/Areas/Admin/Views/Bill/Edit.cshtml
@@ -5,6 +5,17 @@
 @section styles {
     <link rel="stylesheet" href="~/Content/Css/AdminCss/Bill/Edit.css" />
 }
+@section scripts {
+    <script>
+        $(function() {
+            $('.deleteChargeBtn').click(function (e) {
+                if (!confirm('Are you sure you want to delete that')) {
+                    e.preventDefault();
+                }
+            })
+        })
+    </script>
+}
 
 <h1 class="page-title">
     <i class="fa-solid fa-money-bill"></i>
@@ -19,49 +30,56 @@
                     Charges
                 </h3>
                 <nav class="charge-nav">
-                    <a href="#" class="chargeNav-itemLink">
+                    <a href="/Admin/Charge/Add?billID=@Model.BillID" class="chargeNav-itemLink">
                         Add charge
                     </a>
                 </nav>
 
-                <div class="charges">
-                    <h3 class="charge-heading">
-                        List charges
-                    </h3>
+                @if (ViewBag.charges != null && ViewBag.charges.Count != 0)
+                {
+                    <div class="charges">
+                        <h3 class="charge-heading">
+                            List charges
+                        </h3>
 
-                    <div class="charges-item">
-                        <h4 class="chargeItem-name">
-                            Sửa modem
-                        </h4>
-                        <p class="chargeItem-line">
-                            Phí: 145.000 đ
-                        </p>
-                        <p class="chargeItem-desc">
-                            Chi phí sửa modem cho khách hàng!
-                        </p>
-                        <p class="chargeItem-line">
-                            Created Date: 13/5/2023
-                        </p>
+                        @foreach (eProject.Models.Charge charge in ViewBag.charges)
+                        {
+                            <div class="charges-item">
+                                <h4 class="chargeItem-name">
+                                    @charge.ChargeName
+                                </h4>
+                                <p class="chargeItem-line">
+                                    Value: @charge.Value cents
+                                </p>
+                                <p class="chargeItem-desc">
+                                    @charge.Description
+                                </p>
+                                <p class="chargeItem-line">
+                                    Created Date: @charge.CreatedAt.ToString("dd/MM/yyyy")
+                                </p>
 
-                        <div class="callChargeItem-actions">
-                            <a style="background: #e52b50; color: #fff;" href="#" class="callChargeItem-actionItem">
-                                Delete
-                            </a>
-                            <a style="background: #ffbf00; color: #333;" href="#" class="callChargeItem-actionItem">
-                                Edit
-                            </a>
-                        </div>
+                                <div class="callChargeItem-actions">
+                                    <a style="background: #e52b50; color: #fff;" href="/Admin/Charge/Delete?chargeID=@charge.ChargeID" class="callChargeItem-actionItem deleteChargeBtn">
+                                        Delete
+                                    </a>
+                                    <a style="background: #ffbf00; color: #333;" href="/Admin/Charge/Edit?chargeID=@charge.ChargeID" class="callChargeItem-actionItem">
+                                        Edit
+                                    </a>
+                                </div>
+                            </div>
+                        }
                     </div>
-                </div>
+                }
             </div>
         </div>
 
         <div class="col-xl-6">
             <div class="bill">
-                @using (Html.BeginForm("Store", "Bill", new { area = "Admin" }, FormMethod.Post))
+                @using (Html.BeginForm("Update", "Bill", new { area = "Admin" }, FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
-                    @Html.HiddenFor(a => a.AccountID)
+                    @Html.HttpMethodOverride("PUT")
+                    @Html.HiddenFor(a => a.BillID)
                     <div class="form-group">
                         @Html.LabelFor(a => a.InitialDueAmount, new { @class = "form-label" })
                         @Html.EditorFor(a => a.InitialDueAmount, new { htmlAttributes = new { @class = "form-input", placeHolder = "Enter initial due amount" } })
@@ -93,7 +111,7 @@
                         @Html.ValidationMessageFor(a => a.Paid, null, new { @class = "invalidMessage" })
                     </div>
                     <button class="form-btn">
-                        Generate
+                        Update
                     </button>
                 }
             </div>
