--- a/eProject/Areas/Admin/Views/Customer/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Customer/Index.cshtml
@@ -8,7 +8,7 @@
     <script>
         $(function () {
             $(".deleteCustomerBtn").click(function (e) {
-                if (!confirm("Are you sure you want to delete that employee")) {
+                if (!confirm("Are you sure you want to delete that customer")) {
                     e.preventDefault();
                 }
             })
