--- a/eProject/Views/Shared/Partials/Header.cshtml
+++ b/eProject/Views/Shared/Partials/Header.cshtml
@@ -28,7 +28,7 @@
                     </span>
                 </span>
                 <a class="header-navItem" href="~/RetailStores/Index">
-                    Retails stores
+                    Retail show room
                 </a>
             </nav>
 
