--- a/eProject/Areas/Admin/Views/PaymentPlan/Detail.cshtml
+++ b/eProject/Areas/Admin/Views/PaymentPlan/Detail.cshtml
@@ -22,7 +22,7 @@
         <i class="fa-solid fa-plus"></i>
         Add new payment plan detail
     </a>
-    <a class="topNav-btnItem" href="#" style="color: #fff; background-color: #ff2052;">
+    <a class="topNav-btnItem deletePaymentPlanBtn" href="/Admin/PaymentPlan/Delete?paymentPlanID=@Model.PaymentPlanID" style="color: #fff; background-color: #ff2052;">
         <i class="fa-solid fa-trash" style="color: #fff;"></i>
         Delete
     </a>
@@ -92,7 +92,7 @@
                                     <a class="actionMenu-item edit" href="/Admin/PaymentPlanDetail/Edit?paymentPlanDetailID=@item.PaymentPlanDetailID">
                                         Edit
                                     </a>
-                                    <a class="actionMenu-item delete" href="#">
+                                    <a class="actionMenu-item delete deletePaymentPlanBtn" href="/Admin/PaymentPlanDetail/Delete?paymentPlanDetailID=@item.PaymentPlanDetailID">
                                         Delete
                                     </a>
                                     <a class="actionMenu-item" href="/Admin/CallCharge/ListOf?paymentPlanDetailID=@item.PaymentPlanDetailID">
@@ -117,3 +117,15 @@
         @Html.Raw(Model.Description)
     </div>
 </div>
+
+@section scripts {
+    <script>
+        $(function () {
+            $(".deletePaymentPlanBtn").click(function (e) {
+                if (!confirm("Are you sure you want to delete this payment plan")) {
+                    e.preventDefault();
+                }
+            })
+        })
+    </script>
+}
