--- a/eProject/Areas/Admin/Views/Service/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Service/Index.cshtml
@@ -8,7 +8,7 @@
 @section scripts {
     <script>
         $(function () {
-            $("#deleteServiceBtn").click(function (e) {
+            $(".deleteServiceBtn").click(function (e) {
                 if (!confirm("Are you sure you want to delete this service")) {
                     e.preventDefault();
                 }
@@ -26,7 +26,7 @@
         Add new service
     </a>
     <div class="topNav-search">
-        @using(Html.BeginForm("Search", "Service", new { area = "Admin" }, FormMethod.Post, new { @class = "searchForm" }))
+        @using (Html.BeginForm("Search", "Service", new { area = "Admin" }, FormMethod.Post, new { @class = "searchForm" }))
         {
             <input class="searchForm-input" name="keyword" placeholder="Enter service name" />
             <button class="searchForm-btn">
@@ -64,7 +64,7 @@
                             <a class="serviceItem-action" href="/Admin/Service/Edit?serviceID=@service.ServiceID">
                                 Edit
                             </a>
-                            <a class="serviceItem-action dlt" id="deleteServiceBtn" href="#">
+                            <a class="serviceItem-action deleteServiceBtn dlt" href="/Admin/Service/Delete?serviceID=@service.ServiceID">
                                 Delete
                             </a>
                         </div>
@@ -74,3 +74,4 @@
         }
     </div>
 </div>
+
