retail store employee

--- a/eProject/Areas/Admin/Views/RetailShowRoom/Index.cshtml
+++ b/eProject/Areas/Admin/Views/RetailShowRoom/Index.cshtml
@@ -64,6 +64,9 @@
                                 <a class="retailStoreItem-action dlt deleteAction" href="/Admin/RetailShowRoom/Delete?retailShowRoomID=@retailShowRoom.RetailShowRoomID">
                                     Delete
                                 </a>
+                                <a style="background: #339FFF; color: #fff" class="retailStoreItem-action" href="/Admin/RetailShowRoom/Detail?retailShowRoomID=@retailShowRoom.RetailShowRoomID">
+                                    Detail
+                                </a>
                             </div>
                            
                         </div>
