--- a/eProject/Areas/Admin/Views/Customer/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Customer/Index.cshtml
@@ -91,7 +91,7 @@
                                 Edit
                                 <i class="fa-solid fa-pencil"></i>
                             </a>
-                            <a href="#" class="personItem-actionItem delete deleteCustomerBtn">
+                            <a href="/Admin/Customer/Delete?customerID=@customer.CustomerID" class="personItem-actionItem delete deleteCustomerBtn">
                                 Delete
                                 <i class="fa-solid fa-trash"></i>
                             </a>
